# csv-adapter

./: .env.example  .gitignore  ADVANCED_COMMITMENT_IMPLEMENTATION_GUIDE.md  AUDIT_RESPONSE.md  CODEBASE_OWNERS.md  CSV_PROJECT_PLAN.md  Cargo.toml  IMPLEMENTATION_NOTES.md  INDEXER_STRATEGY.md  README.md  RENAMING_PLAN.md  SESSION_SUMMARY.md  clippy.out  clippy_new.out  clippy_remaining.out  csv  csv-  csv-adapter  refactor.md  repomix-output.xml
.config/: nextest.toml
.github/workflows/: ci.yml  health.yml  production-guarantee.yml
chains/: aptos.toml  bitcoin.toml  ethereum.toml  solana.toml  sui.toml
csv-adapter/: Cargo.toml
csv-adapter-aptos/: Cargo.toml  README.md  build.rs
csv-adapter-aptos/contracts/: Move.toml  csv_seal.move
csv-adapter-aptos/src/: adapter.rs  chain_adapter_impl.rs  chain_operations.rs  checkpoint.rs  config.rs  deploy.rs  error.rs  lib.rs  merkle.rs  proofs.rs  real_rpc.rs  rpc.rs  seal.rs  signatures.rs  types.rs
csv-adapter-aptos/tests/: aptos_testnet_real_e2e.rs  signature_integration.rs
csv-adapter-bitcoin/: Cargo.toml  README.md
csv-adapter-bitcoin/examples/: signet_fixed_seed.rs
csv-adapter-bitcoin/src/: adapter.rs  bip341.rs  chain_adapter_impl.rs  chain_operations.rs  config.rs  deploy.rs  error.rs  lib.rs  mempool_rpc.rs  mpc_batch.rs  proofs.rs  proofs_new.rs  real_rpc.rs  rpc.rs  seal.rs  signatures.rs  tapret.rs  testnet_deploy.rs  (+3 more)
csv-adapter-celestia/: Cargo.toml
csv-adapter-celestia/src/: adapter.rs  blob.rs  config.rs  error.rs  lib.rs  rpc.rs  signatures.rs  types.rs
csv-adapter-celestia/tests/: signature_integration.rs
csv-adapter-core/: Cargo.toml  README.md  build.rs
csv-adapter-ethereum/: Cargo.toml  README.md  build.rs
csv-adapter-keystore/: Cargo.toml
csv-adapter-solana/: Cargo.toml  build.rs
csv-adapter-store/: Cargo.toml  README.md
csv-adapter-sui/: Cargo.toml  README.md  build.rs
csv-aptos/: Cargo.toml  README.md
csv-bitcoin/: Cargo.toml  README.md
csv-cli/: Cargo.toml  README.md
csv-core/: Cargo.toml  README.md
csv-ethereum/: Cargo.toml  README.md  build.rs
csv-explorer/: .gitignore  .pids  Cargo.toml  Dockerfile  README.md  config.example.toml  config.mainnet.toml  config.testnet.toml  docker-compose.yml  quick-test.sh  rpc_config.example.json  start.sh  stop.sh  test-api.sh  test.sh  validate.sh
csv-explorer/api/: Cargo.toml
csv-explorer/api/src/: lib.rs  main.rs  server.rs  websocket.rs
csv-explorer/api/src/graphql/: mod.rs  schema.rs  types.rs
csv-explorer/api/src/rest/: handlers.rs  mod.rs  routes.rs
csv-explorer/data/: explorer.db  testnet.db
csv-explorer/docs/: FULL_STARTER_GUIDE.md  NETWORK_GUIDE.md  REALTIME_ACTIVITY.md  WEB_UI_GUIDE.md  WEB_UI_SETUP.md
csv-explorer/indexer/: Cargo.toml
csv-explorer/indexer/src/: aptos.rs  bitcoin.rs  chain_indexer.rs  ethereum.rs  indexer_plugin.rs  lib.rs  main.rs  metrics.rs  rpc_manager.rs  solana.rs  sui.rs  sync.rs  wallet_bridge.rs
csv-explorer/shared/: Cargo.toml
csv-explorer/shared/src/: advanced_types.rs  config.rs  error.rs  lib.rs  types.rs
csv-explorer/src/: lib.rs
csv-explorer/src/api/: handlers.rs  mod.rs  websocket.rs
csv-explorer/src/dashboard/: mod.rs
csv-explorer/src/indexing/: events.rs  mod.rs  processor.rs  storage.rs  sync.rs
csv-explorer/storage/: Cargo.toml
csv-explorer/storage/src/: db.rs  lib.rs  schema.sql  seed.sql
csv-explorer/storage/src/repositories/: advanced_proofs.rs  contracts.rs  mod.rs  rights.rs  seals.rs  stats.rs  sync.rs  transfers.rs
csv-explorer/ui/: Cargo.toml  Dioxus.toml  tailwind.config.js
csv-explorer/ui/src/: app.rs  main.rs
csv-explorer/ui/src/app/: routes.rs
csv-explorer/ui/src/components/: dropdown.rs  mod.rs  search.rs  timeline.rs
csv-explorer/ui/src/hooks/: mod.rs  use_api.rs  use_wallet.rs
csv-explorer/ui/src/pages/: chains.rs  contracts.rs  home.rs  home.rsx  mod.rs  right_detail.rs  rights.rs  seal_detail.rs  seals.rs  stats.rs  stats.rsx  transfer_detail.rs  transfers.rs  wallet.rs
csv-explorer/ui/src/styles/: mod.rs
csv-explorer/ui/web/: index.html  index.html.bak
csv-keys/: Cargo.toml
csv-mcp-server/: package.json  tsconfig.json
csv-sdk/: Cargo.toml  README.md
csv-solana/: Cargo.toml
csv-store/: Cargo.toml
csv-sui/: Cargo.toml  README.md  build.rs
csv-vscode/: package.json
csv-wallet/: BUILD.md  Cargo.toml  Dioxus.toml  IMPLEMENTATION_SUMMARY.md  MOBILE_DESKTOP.md  README.md  package-lock.json
docs/: ADVANCED_FEATURES_EVAL.md  ALUVM.md  ARCHITECTURE.md  BLUEPRINT.md  BLUEPRINT_DX.md  Blueprint.md  CROSS_CHAIN_IMPLEMENTATION.md  CROSS_CHAIN_SPEC.md  CSV_DETAILED_PLAN.md  DEVELOPER_GUIDE.md  E2E_TESTNET_MANUAL.md  INDEX.md  MOTIVATION.md  PLAN.md  PRODUCTION_GUARANTEE_PLAN.md  PRODUCTION_PLAN.md  PRODUCTION_READINESS_EVALUATION.md  README.md  REPO_SPLIT_STRATEGY.md  ReEvaluation.md  SPRINT2_COMPLETE.md  TESTNET_E2E_REPORT.md  Temporary.txt  todo.docx  todo.md
examples/: complete_scalable_demo.rs  gaming.rs  parallel_verification.rs  performance.rs  scalable_client_example.rs  subscriptions.rs
typescript-sdk/: package.json
(+527 files in other folders)
