[package]
name = "csv-adapter-celestia"
version = "0.1.0"
edition = "2021"
description = "Celestia adapter for CSV (Client-Side Validation) with namespaced blob seals"
license = "MIT"

[dependencies]
csv-adapter-core = { path = "../csv-adapter-core" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
hex = "0.4"
sha2 = "0.10"
secp256k1 = { version = "0.27", features = ["global-context", "rand-std"] }

[features]
default = []
rpc = []
production = ["rpc"]

[dev-dependencies]
rand = "0.8"
