[package]
name        = "csv-explorer"
description = "Real-time indexing and visualization for CSV Adapter cross-chain rights"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi, ALL FREE LLMs"]
repository = "https://github.com/zorvan/csv-adapter"
homepage = "https://github.com/zorvan/csv-adapter"
readme = "README.md"
publish = false

[workspace]
members = ["shared", "storage", "indexer", "api", "ui"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi, ALL FREE LLMs"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
lazy_static = "1.4"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
sha3 = "0.10"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
config = "0.14"
dioxus = "0.5"
dioxus-web = "0.5"
dioxus-desktop = "0.5"
csv-adapter-core = { path = "../csv-adapter-core" }

[dependencies]
# Protocol types (sibling workspace)
csv-adapter-core.workspace = true
csv-explorer-shared = { path = "./shared" }
csv-explorer-storage = { path = "./storage" }
csv-explorer-indexer = { path = "./indexer" }

# Async runtime
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Database
sqlx.workspace = true

# HTTP / RPC
reqwest.workspace = true
warp.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# GraphQL
async-graphql.workspace = true
async-graphql-axum.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true
lazy_static.workspace = true

# CLI
clap.workspace = true

# Crypto / encoding
hex.workspace = true
sha3.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time
chrono.workspace = true

# IDs
uuid.workspace = true

# Config loader
config.workspace = true

# UI framework
dioxus.workspace = true
dioxus-web.workspace = true
dioxus-desktop.workspace = true

