[package]
name = "csv-explorer-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
csv-adapter-core.workspace = true
thiserror.workspace = true
hex.workspace = true
sqlx.workspace = true
reqwest.workspace = true
tracing.workspace = true
toml.workspace = true
config.workspace = true
